; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_rdma.c_ecore_rdma_toggle_bit_create_resize_cq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_rdma.c_ecore_rdma_toggle_bit_create_resize_cq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { %struct.ecore_rdma_info* }
%struct.ecore_rdma_info = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@ECORE_MSG_RDMA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"icid = %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"ECORE_RDMA_TOGGLE_BIT_= %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ecore_hwfn*, i32)* @ecore_rdma_toggle_bit_create_resize_cq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecore_rdma_toggle_bit_create_resize_cq(%struct.ecore_hwfn* %0, i32 %1) #0 {
  %3 = alloca %struct.ecore_hwfn*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ecore_rdma_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %9 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %8, i32 0, i32 0
  %10 = load %struct.ecore_rdma_info*, %struct.ecore_rdma_info** %9, align 8
  store %struct.ecore_rdma_info* %10, %struct.ecore_rdma_info** %5, align 8
  %11 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %12 = load i32, i32* @ECORE_MSG_RDMA, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @DP_VERBOSE(%struct.ecore_hwfn* %11, i32 %12, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %17 = load %struct.ecore_rdma_info*, %struct.ecore_rdma_info** %5, align 8
  %18 = getelementptr inbounds %struct.ecore_rdma_info, %struct.ecore_rdma_info* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @ecore_cxt_get_proto_cid_start(%struct.ecore_hwfn* %16, i32 %19)
  %21 = sub nsw i32 %15, %20
  store i32 %21, i32* %7, align 4
  %22 = load %struct.ecore_rdma_info*, %struct.ecore_rdma_info** %5, align 8
  %23 = getelementptr inbounds %struct.ecore_rdma_info, %struct.ecore_rdma_info* %22, i32 0, i32 0
  %24 = call i32 @OSAL_SPIN_LOCK(i32* %23)
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.ecore_rdma_info*, %struct.ecore_rdma_info** %5, align 8
  %27 = getelementptr inbounds %struct.ecore_rdma_info, %struct.ecore_rdma_info* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @OSAL_TEST_AND_FLIP_BIT(i32 %25, i32 %29)
  %31 = icmp ne i32 %30, 0
  %32 = xor i1 %31, true
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %6, align 4
  %34 = load %struct.ecore_rdma_info*, %struct.ecore_rdma_info** %5, align 8
  %35 = getelementptr inbounds %struct.ecore_rdma_info, %struct.ecore_rdma_info* %34, i32 0, i32 0
  %36 = call i32 @OSAL_SPIN_UNLOCK(i32* %35)
  %37 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %38 = load i32, i32* @ECORE_MSG_RDMA, align 4
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @DP_VERBOSE(%struct.ecore_hwfn* %37, i32 %38, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* %6, align 4
  ret i32 %41
}

declare dso_local i32 @DP_VERBOSE(%struct.ecore_hwfn*, i32, i8*, i32) #1

declare dso_local i32 @ecore_cxt_get_proto_cid_start(%struct.ecore_hwfn*, i32) #1

declare dso_local i32 @OSAL_SPIN_LOCK(i32*) #1

declare dso_local i32 @OSAL_TEST_AND_FLIP_BIT(i32, i32) #1

declare dso_local i32 @OSAL_SPIN_UNLOCK(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
